fix: mega menu on mobile

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,6 @@
 @import "mixins";
 @import "variables";
+
 @media (any-hover: hover) {
   .btn:hover {
     .mega-menu {
@@ -11,7 +12,6 @@
     }
   }
 }
-
 .header {
   .header-top {
     &-content {
@@ -34,6 +34,7 @@
       width:      100%;
       height:     3px;
       background: $color-main;
+      transition: .3s linear;
       &::after, &::before {
         content:    "";
         position:   absolute;
@@ -88,7 +89,6 @@
     background: #272727;
     .menu-content {
       @include flex-c-sb;
-      padding:  0 15px;
       position: relative;
     }
     .menu-list {
@@ -117,7 +117,7 @@
     }
     .btn {
       > a {
-        position: relative;
+        position:       relative;
         background:     $color-btn;
         color:          #272727;
         padding:        20px 35px;
@@ -132,7 +132,7 @@
           color: $color-base;
           &::after {
             border-color: $color-base;
-            transform: translate(-50%, -50%) rotate(45deg);
+            transform:    translate(-50%, -50%) rotate(45deg);
           }
         }
         .mega-menu {
@@ -201,6 +201,7 @@
     }
   }
 }
+
 @media screen and (max-width: 1100px) {
   .header {
     .header-menu {
@@ -216,10 +217,10 @@
 @media screen and (max-width: 992px) {
   .header {
     .header-top {
-     position: fixed;
+      position:   fixed;
       background: $color-base;
-      width: 100%;
-      z-index: 10;
+      width:      100%;
+      z-index:    10;
       &-content {
         display:     flex;
         align-items: center;
@@ -244,9 +245,29 @@
       }
     }
     .header-menu {
+      position:   fixed;
+      top:        54px;
+      left:       0;
+      z-index:    10;
+      background: rgba(0, 0, 0, 0.7);
+      width:      100%;
+      height:     100%;
+      opacity:    0;
+      visibility: hidden;
+      transition: 0.3s linear;
+      &.mobile-menu {
+        opacity:    1;
+        visibility: visible;
+        .menu-content {
+          transform: translate(0,0);
+        }
+      }
+      .container {
+        padding: 0;
+      }
       .btn {
         > a {
-          display: inline-block;
+          display:        inline-block;
           width:          100%;
           padding:        20px;
           background:     #f8c246;
@@ -257,16 +278,16 @@
             color:      $color-base;
           }
           &::after {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 90%;
-            width: 6px;
-            height: 6px;
-            display: inline-block;
-            cursor: pointer;
-            transform: translate(-50%, -50%) rotate(-135deg);
-            border-top: 1px solid #272727;
+            content:     "";
+            position:    absolute;
+            top:         50%;
+            left:        90%;
+            width:       6px;
+            height:      6px;
+            display:     inline-block;
+            cursor:      pointer;
+            transform:   translate(-50%, -50%) rotate(-135deg);
+            border-top:  1px solid #272727;
             border-left: 1px solid #272727;
           }
         }
@@ -278,8 +299,8 @@
           &-inner {
             flex-direction: column;
             border:         none;
-            padding: 20px 0 0;
-            box-shadow: none;
+            padding:        20px 0 0;
+            box-shadow:     none;
           }
           &-list {
             width:   100%;
@@ -307,77 +328,72 @@
         }
       }
       .menu-content {
-        display:  none;
-        position: relative;
+        justify-content: flex-start;
+        width:           270px;
+        background:      $color-base;
+        flex-direction:  column;
+        align-items:     normal;
+        padding:         0;
+        box-shadow:      0 2px 4px rgba(0, 0, 0, .075);
+        overflow:        auto;
+        height:          calc(100vh - 54px);
+        transform: translate(-100%,0);
+        transition: 0.3s linear;
       }
-      .mobile-menu {
-        width:          270px;
-        background:     $color-base;
-        position:       fixed;
-        top:            54px;
-        left:           0;
-        z-index:        10;
-        display:        flex;
+      .menu-list {
         flex-direction: column;
-        align-items:    normal;
-        padding:        20px 0 0;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, .075);
-        overflow: auto;
-        height: calc(100vh - 54px);
-        .menu-list {
-          flex-direction: column;
-          margin-bottom:  15px;
-        }
-        .menu-item {
-          width: 100%;
-          &:hover {
-            background: #272727;
-            > a {
-              color: $color-base;
-            }
-          }
-          &.active {
-            background: #272727;
-            > a {
-              display:    inline-block;
-              color:      $color-base;
-              border-top: transparent;
-              background: #272727;
-            }
-          }
+        margin-bottom:  15px;
+      }
+      .menu-item {
+        width: 100%;
+        &:hover {
+          background: #272727;
           > a {
-            width:   100%;
-            padding: 20px;
-            display: inline-block;
-            color:   #272727;
-            &:hover {
-              border-top: 5px solid transparent;
-            }
+            color: $color-base;
           }
-            &-item {
-              align-items: normal;
-              a {
-                color:         #27282c;
-                margin-bottom: 35px;
-                &:last-child {
-                  margin-bottom: 15px;
-                }
-              }
-            }
-            .list-content {
-              flex-direction: column;
-              text-align:     left;
-              align-items:    normal;
-              padding:        0 15px;
-            }
-          }
-        .burger {
-          align-self: flex-start;
         }
+        &.active {
+          background: #272727;
+          > a {
+            display:    inline-block;
+            color:      $color-base;
+            border-top: transparent;
+            background: #272727;
+          }
+        }
+        > a {
+          width:   100%;
+          padding: 20px;
+          display: inline-block;
+          color:   #272727;
+          &:hover {
+            border-top: 5px solid transparent;
+          }
+        }
+        &-item {
+          align-items: normal;
+          a {
+            color:         #27282c;
+            margin-bottom: 35px;
+            &:last-child {
+              margin-bottom: 15px;
+            }
+          }
+        }
+        .list-content {
+          flex-direction: column;
+          text-align:     left;
+          align-items:    normal;
+          padding:        0 15px;
+        }
+      }
+      .burger {
+        align-self: flex-start;
       }
     }
   }
 }
+
 @media screen and (max-width: 768px) {
   .header {
     .header-menu {
@@ -387,6 +403,7 @@
     }
   }
 }
+
 @media screen and (max-width: 567px) {
   .header {
     .header-top-content {
