--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 .inner-sidebar {
-  max-width: 320px;
+  max-width: 330px;
   .sidebar-title {
     border-bottom: 1px solid $color-border;
     padding:       0 0 10px;
